sbt target for building macOS app dmg.